WEEK02—Kubernetes+Containers/day13/manifests/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-api-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80





#This policy:
#Denies all traffic except from the Nginx ingress controller

#Allows outbound HTTP traffic only
